--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKuuPqyp6L/RBhrz9+UZr7",
+      "authorship_tag": "ABX9TyNX51wV2aKcRY414/XuAFnI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15656,11 +15656,11 @@
         "    print(f\"Importancia de {importancia}: {importancias[i]:.4f}\")"
       ],
       "metadata": {
-        "id": "i6kImT4fAGQ5",
-        "outputId": "b2cbecba-b3d9-4971-fb1e-3e6ba0254978",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i6kImT4fAGQ5",
+        "outputId": "b2cbecba-b3d9-4971-fb1e-3e6ba0254978"
       },
       "execution_count": 320,
       "outputs": [
@@ -16854,11 +16854,11 @@
         "    print(f\"Importancia de {importancia}: {importancias[i]:.4f}\")"
       ],
       "metadata": {
-        "id": "qaamCpulAVQs",
-        "outputId": "c6bbdb36-5337-4fb6-f670-249823888589",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qaamCpulAVQs",
+        "outputId": "c6bbdb36-5337-4fb6-f670-249823888589"
       },
       "execution_count": 321,
       "outputs": [
@@ -18425,7 +18425,56 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **◼️ ALGORITMO 4: K-Nearest Neighbor (KNN)**\n",
+        "Se calcula la importancia de las características con otro método. Si bien los coeficientes varían, el orden de importancia se mantiene."
+      ],
+      "metadata": {
+        "id": "nZ-j8itICNb5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se calcula la importancia de las características\n",
+        "resultado = permutation_importance(model_RF, X_train, y_train, scoring='neg_root_mean_squared_error', random_state=42)\n",
+        "importancias= resultado.importances_mean\n",
+        "\n",
+        "# Se muestra la importancia de las características\n",
+        "print(\"Importancia de los predictores en el modelo\")\n",
+        "print(\"-------------------------------------------\")\n",
+        "\n",
+        "for i, importancia in enumerate(X.columns):\n",
+        "    print(f\"{importancia}: {importancias[i]:.4f}\")"
+      ],
+      "metadata": {
+        "id": "-Af0mwggB0Mu",
+        "outputId": "9622f098-d73d-48fc-b39f-abe6cdd6fabb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 326,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Importancia de los predictores en el modelo\n",
+            "-------------------------------------------\n",
+            "citric acid: 0.0054\n",
+            "pH: 0.0011\n",
+            "total acidity: 0.0015\n",
+            "prop sulful: 0.0175\n",
+            "ajust density: 0.1828\n",
+            "sweetness: 0.0046\n",
+            "sulphate index: 0.0244\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **◼️ ALGORITMO 5: K-Nearest Neighbor (KNN)**\n",
         "----"
       ],
       "metadata": {
