--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPl6BOVVF9jGge3wURLzqHZ",
+      "authorship_tag": "ABX9TyNhO20Yw9761qJKn69LeyO7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15633,6 +15633,15 @@
       ],
       "metadata": {
         "id": "Wm939pROAKJ1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La importancia de la permutación es un método para calcular la importancia de las características en el que los valores de cada característica evalúan uno a uno midiendo la disminución resultante en el rendimiento del modelo. Una característica con una alta puntuación de importancia de permutación es aquella que, cuando se baraja, hace que el rendimiento del modelo disminuya significativamente. Esto indica que la característica es importante para las predicciones del modelo."
+      ],
+      "metadata": {
+        "id": "HrUAn7V8DOpa"
       }
     },
     {
